fix(test): delete storyline milestones and storylines before campaigns in AdvancedCampaignE2ETest
FK_STORYLINE_CAMPAIGN prevents campaign deletion when campaign_storyline rows
still reference them. Delete StorylineMilestone → CampaignStoryline → Campaign
in dependency order to satisfy referential integrity.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>